LPS-80390 Fix document-library download link on IE11 and Safari

--- a/modules/apps/dynamic-data-mapping/dynamic-data-mapping-form-renderer/src/main/resources/META-INF/resources/css/main.scss
+++ b/modules/apps/dynamic-data-mapping/dynamic-data-mapping-form-renderer/src/main/resources/META-INF/resources/css/main.scss
@@ -207,6 +207,11 @@ body .ddm-user-view-content {
 		text-align: center;
 	}
 }
+.liferay-ddm-form-field-document-library {
+	a {
+		display: inline-block;
+	}
+}
 
 .radio-options {
 	.radio-inline {
